--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.1.0'
     implementation 'androidx.navigation:navigation-ui:2.1.0'
     implementation 'io.reactivex.rxjava3:rxjava:3.0.0-RC6'
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
