--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,10 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.1.0'
     implementation 'io.reactivex.rxjava3:rxjava:3.0.0-RC6'
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    implementation 'com.google.dagger:dagger:2.25.3'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.25.3'
+    implementation 'com.google.dagger:dagger-android:2.25.3'
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.25.3'
+    implementation 'com.google.dagger:dagger-android-support:2.25.3'
 }
