--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,11 @@ apply plugin: 'com.android.application'
 apply plugin: "androidx.navigation.safeargs"
 
 android {
+
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
+
     compileSdkVersion 29
     defaultConfig {
         applicationId "com.bbeacon"
@@ -44,4 +49,8 @@ dependencies {
     implementation 'com.google.dagger:dagger-android:2.25.3'
     annotationProcessor 'com.google.dagger:dagger-android-processor:2.25.3'
     implementation 'com.google.dagger:dagger-android-support:2.25.3'
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+    testImplementation "org.mockito:mockito-core:2.23.0"
 }
