--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
     compileSdkVersion 29
     defaultConfig {
         applicationId "com.bbeacon"
-        minSdkVersion 25
+        minSdkVersion 29
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -36,7 +36,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.navigation:navigation-fragment:2.1.0'
@@ -44,13 +44,16 @@ dependencies {
     implementation 'io.reactivex.rxjava3:rxjava:3.0.0-RC6'
     implementation 'com.google.code.gson:gson:2.8.6'
 
-    implementation 'com.google.dagger:dagger:2.25.3'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.25.3'
-    implementation 'com.google.dagger:dagger-android:2.25.3'
-    annotationProcessor 'com.google.dagger:dagger-android-processor:2.25.3'
-    implementation 'com.google.dagger:dagger-android-support:2.25.3'
+    implementation 'com.google.dagger:dagger:2.25.4'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.25.4'
+    implementation 'com.google.dagger:dagger-android:2.25.4'
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.25.4'
+    implementation 'com.google.dagger:dagger-android-support:2.25.4'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
-    testImplementation "org.mockito:mockito-core:2.23.0"
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
+    testImplementation 'org.mockito:mockito-core:2.23.0'
+    testImplementation 'android.arch.core:core-testing:1.1.1'
+    testImplementation 'com.jraska.livedata:testing:1.1.0'
+
 }
