--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,10 +2,12 @@ apply plugin: 'com.android.application'
 
 apply plugin: "androidx.navigation.safeargs"
 
-android {
+apply plugin: "de.mannodermaus.android-junit5"
 
+android {
     testOptions {
         unitTests.returnDefaultValues = true
+        unitTests.includeAndroidResources = true
     }
 
     compileSdkVersion 29
@@ -51,9 +53,14 @@ dependencies {
     implementation 'com.google.dagger:dagger-android-support:2.25.4'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
+    testRuntimeOnly("org.junit.vintage:junit-vintage-engine:5.5.2")
     testImplementation 'org.mockito:mockito-core:2.23.0'
+    androidTestImplementation 'org.mockito:mockito-android:2.18.3'
+    androidTestImplementation 'android.arch.core:core-testing:1.1.1'
     testImplementation 'android.arch.core:core-testing:1.1.1'
-    testImplementation 'com.jraska.livedata:testing:1.1.0'
+    androidTestImplementation 'com.jraska.livedata:testing:1.1.0'
+
+    testImplementation 'org.robolectric:robolectric:4.3.1'
 
 }
